--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Scroll down to explore about us.</p>
         </div>
         <div class="half_width">
-            <img class="person" src="/images/person/person-0.png" alt="">
+            <img class="person" src="/images/person/person.png" alt="Person's Picture">
         </div>
     </section>
 
