Footer text style changed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
     <title>myportfolio</title>
 </head>
 
@@ -103,9 +106,9 @@
     </section>
 
     <footer>
-        <em>
+
         <h1>Misson <span style="color: rgb(255, 60, 0);">2022</span></h1>
-    </em>
+
         <p>Hardwork, Perseveration, and Determination for 2022</p>
 
         <small><p>&copyAll rights reserve to Uzzal Ahmed</p></small>
